# anime-recommender

./: .dockerignore  .dvcignore  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  application.py  deployment.yaml  dvc.yaml  pyproject.toml
.dvc/: config
artifacts/: .gitignore  model.dvc  model_checkpoints.dvc  processed.dvc  raw.dvc  weights.dvc
config/: config.yaml  paths_config.py
notebook/: anime.ipynb
pipeline/: prediction_pipeline.py  training_pipeline.py  trainining_pipeline.py
src/: base_model.py  custom_exception.py  data_ingestion.py  data_processing.py  logger.py  model_training.py
static/: script.js  styles.css
templates/: index.html
utils/: common_functions.py  helpers.py
